# tutor-ka-localization

./: README.md  pyproject.toml
tutor_ka_localization/: plugin.py
tutor_ka_localization/templates/custom_i18n/: i18n-shim.js  ka.json
